platform-services-v2/application-services/platform-ui/platform-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-ui
  namespace: argocd
spec:
  type: ClusterIP
  ports:
  - name: streamlit
    port: 8501
    targetPort: 8501
    protocol: TCP
  selector:
    app: platform-ui
