platform-services-v2/application-services/platform-ui/platform-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-alb
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: base-platform-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-00d893f736ab72568,subnet-0bcf6a6eaf4386574
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "8501"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      # ArgoCD
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      # Vault
      - path: /vault
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
      # Grafana
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
      # Prometheus  
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
      # Airflow
      - path: /airflow
        pathType: Prefix
        backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
      # Kiali (Istio)
      - path: /kiali
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
      # MLflow
      - path: /mlflow
        pathType: Prefix
        backend:
          service:
            name: mlflow-tracking
            port:
              number: 5000
      # Platform UI (default route)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-ui
            port:
              number: 8501
